# idscrub

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  SECURITY.md  SECURITY_CHECKLIST.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
idscrub/: __init__.py  locations.py  scrub.py
notebooks/: basic_usage.ipynb  custom_methods.ipynb
test/: conftest.py  test_all.py  test_chain.py  test_dataframe.py  test_errors.py  test_exclude.py  test_group.py  test_huggingface.py  test_id.py  test_label.py  test_log.py  test_overlap.py  test_persidio.py  test_phonenumbers.py  test_presidio.py  test_regex.py  test_scrub.py  test_scrub_text.py  test_spacy.py
