[project]
name = "idscrub"
dynamic = ["version"]
authors = [{ name="Department for Business and Trade" }]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "phonenumbers>=9.0.18",
    "pip>=25.3",
    "spacy-transformers>=1.3.9",
    "tqdm>=4.67.1",
    "presidio-analyzer",
    "presidio-anonymizer",
]

[project.optional-dependencies]
trf = ["en_core_web_trf"]

[tool.uv.sources]
en_core_web_trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# Enables setuptools-scm
[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
# Ruff defaults mostly taken from https://docs.astral.sh/ruff/configuration/
exclude = [
    "archive",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.ipynb"
]

indent-width = 4
src = ["idscrub"]

line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I"
]

ignore = ["E501"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "--cov=idscrub test/"
